feat: create conversation starter event

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/@tailwindcss/forms@0.3.2/src/index.js">
 
-    <title>Websocket</title>
+    <title>Chatsocket</title>
 </head>
 
 <body>
